# Rust-WebTodoList

./: .gitattributes  Cargo.toml  main.css
src/: context.rs  main.rs  todo.rs
templates/: index.html.tera  todos.html.tera
