[package]
name = "rocket-todo"
version = "0.1.0"
authors = ["draxis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.116"
serde_derive = "1.0.116"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "handlebars_templates", "tera_templates"]